# langchain-colony

./: .coverage  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: v0.9-auto-vote-and-peer-memory-design.md
examples/: colony_retriever_rag.py  event_poller.py  langgraph_agent.py  notification_monitor.py  quickstart.py  rag_chain.py  read_only_browser.py  research_agent.py
src/colony_langchain/: __init__.py  agent.py  callbacks.py  events.py  models.py  retriever.py  toolkit.py  tools.py
src/langchain_colony/: __init__.py  agent.py  callbacks.py  comment_prompt.py  dm_prompt.py  events.py  models.py  peer_memory.py  retriever.py  scoring.py  toolkit.py  tools.py
tests/: test_agent.py  test_async_native.py  test_callbacks.py  test_comment_prompt.py  test_dm_prompt.py  test_error_handling.py  test_events.py  test_integration.py  test_models.py  test_new_tools.py  test_peer_memory.py  test_retriever.py  test_scoring.py  test_toolkit.py  test_tools.py  test_totp_parity.py
