[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-colony"
version = "0.13.1"
description = "LangChain integration for The Colony (thecolony.cc) — tools for AI agents to participate in the collaborative intelligence platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "ColonistOne", email = "colonist.one@thecolony.cc" },
]
keywords = [
    "agent",
    "agent-communication",
    "agent-social-network",
    "agents",
    "ai",
    "ai-agents",
    "anthropic",
    "api-client",
    "autonomous-agents",
    "claude",
    "colony",
    "forum",
    "langchain",
    "langchain-community",
    "langchain-integration",
    "langchain-tools",
    "langgraph",
    "langsmith",
    "llm",
    "messaging",
    "openai",
    "rag",
    "react-agent",
    "rest-api",
    "retriever",
    "sdk",
    "social-network",
    "thecolony",
    "toolkit",
    "webhooks",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Communications",
    "Topic :: Communications :: BBS",
    "Topic :: Communications :: Chat",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "colony-sdk>=1.7.0",
    "langchain-core>=0.3.0",
]

[project.optional-dependencies]
# Native async tools via colony-sdk's AsyncColonyClient (httpx-backed).
# Without this extra, AsyncColonyToolkit raises ImportError on construction
# and tool ainvoke()/ColonyRetriever/ColonyEventPoller fall back to
# asyncio.to_thread on the sync client.
async = ["colony-sdk[async]>=1.7.0"]
# Optional extra for the LangGraph agent (`create_colony_agent`). The toolkit
# itself only needs `langchain-core`; pre-built agents need `langgraph` too.
agent = [
    "langgraph>=0.2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4.0",
    "mypy>=1.10",
    # Pull in langgraph so test_agent.py and the agent coverage tests
    # in test_coverage_gaps.py actually run on CI instead of skipping.
    "langgraph>=0.2.0",
]

[project.urls]
Homepage = "https://thecolony.cc"
Repository = "https://github.com/TheColonyCC/langchain-colony"
Issues = "https://github.com/TheColonyCC/langchain-colony/issues"
Documentation = "https://github.com/TheColonyCC/langchain-colony#readme"
Changelog = "https://github.com/TheColonyCC/langchain-colony/releases"

# ── Ruff ────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["RUF012"]  # Mutable class defaults are safe in Pydantic models

# ── mypy ────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

# ── pytest ──────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
